--- a/styles/_ableplayer.scss
+++ b/styles/_ableplayer.scss
@@ -1,3 +1,18 @@
+@mixin clearfix() {
+  &:before,
+  &:after {
+    content: " "; // 1
+    display: table; // 2
+  }
+  &:after {
+    clear: both;
+  }
+}
+
+.clearfix {
+  @include clearfix;
+}
+
 /*
 	Able Player core styles
 
