--- a/styles/main.scss
+++ b/styles/main.scss
@@ -1,1 +1,8 @@
-@import "./ableplayer";
+@import './ableplayer';
+
+@import
+  './defaults',
+  './react-ableplayer',
+  './captions',
+  './controls',
+  './statusbar';
