--- a/styles/_ableplayer.scss
+++ b/styles/_ableplayer.scss
@@ -791,7 +791,7 @@ span.able-modkey {
   bottom: 0;
   right: 0;
   cursor: nwse-resize;
-  background: transparent url("/images/wingrip.png") no-repeat;
+  // background: transparent url("../images/wingrip.png") no-repeat;
 }
 /*
   Sign Language Window
@@ -1262,11 +1262,11 @@ button svg {
 */
 @font-face {
   font-family: 'able';
-  src: url("/fonts/able/able.eot?dqripi");
-  src: url("/fonts/able/able.eot?dqripi#iefix") format('embedded-opentype'),
-    url("/fonts/able/able.ttf?dqripi") format('truetype'),
-    url("/fonts/able/able.woff?dqripi") format('woff'),
-    url("/fonts/able/able.svg?dqripi#able") format('svg');
+  src: url("../fonts/able/able.eot?dqripi");
+  src: url("../fonts/able/able.eot?dqripi#iefix") format('embedded-opentype'),
+    url("../fonts/able/able.ttf?dqripi") format('truetype'),
+    url("../fonts/able/able.woff?dqripi") format('woff'),
+    url("../fonts/able/able.svg?dqripi#able") format('svg');
   font-weight: normal;
   font-style: normal;
 }
